switch layout by win+space

--- a/roles/colemak-dh/templates/40-libinput-colemak.conf.j2
+++ b/roles/colemak-dh/templates/40-libinput-colemak.conf.j2
@@ -5,4 +5,5 @@ Section "InputClass"
         Driver "libinput"
         Option "XkbLayout" "us,ru"
         Option "XkbVariant" "colemak,qwerty"
+        Option "XkbOptions" "grp:win_space_toggle"
 EndSection
