adjust keyboard configuration

--- a/roles/colemak-dh/templates/40-libinput-colemak.conf.j2
+++ b/roles/colemak-dh/templates/40-libinput-colemak.conf.j2
@@ -1,8 +1,6 @@
 Section "InputClass"
-        Identifier "libinput keyboard catchall"
+        Identifier "system-keyboard"
         MatchIsKeyboard "on"
-        MatchDevicePath "/dev/input/event*"
-        Driver "libinput"
         Option "XkbLayout" "us,ru"
         Option "XkbVariant" "colemak,qwerty"
         Option "XkbOptions" "grp:win_space_toggle"
