switch to colemak_dh

--- a/roles/colemak-dh/templates/40-libinput-colemak.conf.j2
+++ b/roles/colemak-dh/templates/40-libinput-colemak.conf.j2
@@ -2,6 +2,6 @@ Section "InputClass"
         Identifier "system-keyboard"
         MatchIsKeyboard "on"
         Option "XkbLayout" "us,ru"
-        Option "XkbVariant" "colemak,qwerty"
+        Option "XkbVariant" "colemak_dh,qwerty"
         Option "XkbOptions" "grp:win_space_toggle"
 EndSection
