--- a/roles/colemak-dh/templates/00-keyboard.conf.j2
+++ b/roles/colemak-dh/templates/00-keyboard.conf.j2
@@ -2,6 +2,7 @@ Section "InputClass"
         Identifier "system-keyboard"
         MatchIsKeyboard "on"
         Option "XkbLayout" "us,ru"
+        Option "XkbModel" "pc104"
         Option "XkbVariant" "colemak_dh,qwerty"
-        Option "XkbOptions" "grp:win_space_toggle"
+        Option "XkbOptions" "grp:win_space_toggle,terminate:ctrl_alt_bksp"
 EndSection
