drop surfraw-rofi

--- a/roles/browsers/templates/browser.sh.j2
+++ b/roles/browsers/templates/browser.sh.j2
@@ -1,7 +1,7 @@
 #!/bin/bash
 # {{ ansible_managed }}
 
-menu=$(echo -e "{% for browser in browser_choices %}{{ browser }}\n{% endfor %}" | rofi -dmenu -p "browser ")
+menu=$(echo -e "{% for browser in browser_choices %}{{ browser }}\n{% endfor %}" | dmenu -p "browser ")
 
 if [[ $menu == \|* ]]; then
     eval echo \"$@\" $menu > /dev/null 2>&1 &
