--- a/roles/colemak-dh/templates/00-keyboard.conf.j2
+++ b/roles/colemak-dh/templates/00-keyboard.conf.j2
@@ -3,6 +3,6 @@ Section "InputClass"
         MatchIsKeyboard "on"
         Option "XkbLayout" "us,ru"
         Option "XkbModel" "pc104"
-        Option "XkbVariant" "colemak_dh,qwerty"
+        Option "XkbVariant" "colemak_dh,"
         Option "XkbOptions" "grp:win_space_toggle,terminate:ctrl_alt_bksp"
 EndSection
